# RPI-Distributed

./: .dockerignore  .gitignore  compose.yaml  package.json
.github/workflows/: backend.yml  docker-image.yml  frontend.yml  worker.yml
backend/: CMakeLists.txt  Dockerfile  orchestrator.cpp
backend/RAG/: CMakeLists.txt  Dockerfile  main.cpp
backend/RAG/llama.cpp/: CMakeLists.txt
backend/RAG/src/: CMakeLists.txt  main.cpp  rpc-embedding.hpp  storage.hpp
backend/include/: llama-manager.hpp  rpc-embedding.hpp  ssh-manager.hpp  storage.hpp
backend/orchestator/: CMakeLists.txt  orchestator.cpp
backend/src/: llama-manager.cpp  rpc-embedding.cpp  ssh-manager.cpp  storage.cpp
frontend/: Dockerfile  nginx.conf  package.json
frontend/src/: global.css
frontend/src/components/: Alerts.svelte  Chat.svelte  ClusterCanvas.svelte  Header.svelte  Input.svelte  Node.svelte  RAG.svelte  SSHModel.svelte  Settings.svelte  Toast.svelte  chat.svelte  header.svelte  input.svelte  settings.svelte
frontend/src/lib/: deviceState.svelte.ts  notification.svelte.ts  rag.svelte.ts  stores.ts  types.ts
frontend/src/routes/: +layout.svelte  +page.svelte  input.svelte
frontend/src/routes/api/model/: +server.ts
frontend/src/routes/chat/: +page.svelte
src/lib/: types.ts
src/routes/: +layout.svelte  +page.svelte  chat.svelte  header.svelte  input.svelte
worker/: Dockerfile
